Empty Images occlude mesh vertices and edges in edit mode #57696

Closed
opened 2018-11-08 13:52:40 +01:00 by Dalai Felinto · 13 comments

Blender Version
Broken: 85a9744905 (blender2.8 HEAD)
Worked: ?

Short description of error
In editmesh mode, mesh edges and vertices are occluded by empty images even when they are partially transparent.

Exact steps for others to reproduce the error

As you will see, when the object is in edit mesh mode, its edges and vertices are occluded by the empty image. Its faces show fine though. The empty image is set to partial transparency.

bug-empty.jpg

**Blender Version** Broken: 85a97449051a (blender2.8 HEAD) Worked: ? **Short description of error** In editmesh mode, mesh edges and vertices are occluded by empty images even when they are partially transparent. **Exact steps for others to reproduce the error** * Just open the simple file and rotate around: [empty-image-editmesh-occlusion.blend](https://archive.blender.org/developer/F5441594/empty-image-editmesh-occlusion.blend) As you will see, when the object is in edit mesh mode, its edges and vertices are occluded by the empty image. Its faces show fine though. The empty image is set to partial transparency. ![bug-empty.jpg](https://archive.blender.org/developer/F5441618/bug-empty.jpg)
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Jacques Lucke was assigned by Dalai Felinto 2018-11-08 13:53:58 +01:00
Author
Owner

Added subscriber: @fclem

Added subscriber: @fclem
Author
Owner

Assigning to Jacques since he was working on it. Feel free to pass it on to @fclem.

Assigning to Jacques since he was working on it. Feel free to pass it on to @fclem.
Jacques Lucke removed their assignment 2018-11-08 14:47:04 +01:00
Clément Foucault was assigned by Jacques Lucke 2018-11-08 14:47:04 +01:00
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Looks like the empty image drawn before the mesh selection overlay. Unfortunately I still don't understand how drawing transparent things works when they are not drawn background first... So I don't know how to fix this.

@fclem: I know we talked about that for a moment last week but I still don't quite get it.. It would be nice if you could send me a link to some learning material on the topic.

Looks like the empty image drawn before the mesh selection overlay. Unfortunately I still don't understand how drawing transparent things works when they are not drawn background first... So I don't know how to fix this. @fclem: I know we talked about that for a moment last week but I still don't quite get it.. It would be nice if you could send me a link to some learning material on the topic.

@JacquesLucke just don't write to the depth buffer for these. We don't really care for the order of overlapping transparent image empties. If you want you can sort them based on their origins. There is a function for that actually: DRW_pass_sort_shgroup_z(). Maybe do that for only for transparent images.

@JacquesLucke just don't write to the depth buffer for these. We don't really care for the order of overlapping transparent image empties. If you want you can sort them based on their origins. There is a function for that actually: DRW_pass_sort_shgroup_z(). Maybe do that for only for transparent images.
Member

The problem here is not when there multiple image empties but that the mesh selection overlay is hidden behind a transparent image empty.

The problem here is not when there multiple image empties but that the mesh selection overlay is hidden behind a transparent image empty.

If you don't write to the depth buffer they will not occlude the mesh selection.

If you don't write to the depth buffer they will not occlude the mesh selection.
Member

I think I even tried this and then other things were looking wrong, but I'll check that again tomorrow.

I think I even tried this and then other things were looking wrong, but I'll check that again tomorrow.
Member

ok, when I just disable writing to the depth buffer I get these tow problems:

transparent image empty bug.gif

transparent image empty bug 2.gif

The mesh wire and the image empties are currently in the same draw pass. Should we separate the images out into a separate draw pass so that we can sort them independently of the other non-mesh stuff?
It just feels like simply disabling writing to the depth buffer will only cause other bug reports in the future..

ok, when I just disable writing to the depth buffer I get these tow problems: ![transparent image empty bug.gif](https://archive.blender.org/developer/F5457460/transparent_image_empty_bug.gif) ![transparent image empty bug 2.gif](https://archive.blender.org/developer/F5457463/transparent_image_empty_bug_2.gif) The mesh wire and the image empties are currently in the same draw pass. Should we separate the images out into a separate draw pass so that we can sort them independently of the other non-mesh stuff? It just feels like simply disabling writing to the depth buffer will only cause other bug reports in the future..

Yes do a special pass for transparent image empties.

In #57696#551678, @fclem wrote:
@JacquesLucke just don't write to the depth buffer for these. We don't really care for the order of overlapping transparent image empties. If you want you can sort them based on their origins. There is a function for that actually: DRW_pass_sort_shgroup_z(). Maybe do that for only for transparent images.

You cannot have everything. Transparency, Occlusion, Dithering. You must choose the lesser evil.

Yes do a special pass for transparent image empties. > In #57696#551678, @fclem wrote: > @JacquesLucke just don't write to the depth buffer for these. We don't really care for the order of overlapping transparent image empties. If you want you can sort them based on their origins. There is a function for that actually: DRW_pass_sort_shgroup_z(). Maybe do that for only for transparent images. You cannot have everything. Transparency, Occlusion, Dithering. You must choose the lesser evil.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This was fixed some time ago.

This was fixed some time ago.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57696
No description provided.